<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WeatherActivity</string>
    <string name="username_txt">   UserName : </string>
    <string name="username_hint">   Email</string>
    <string name="password_txt">Password:</string>
    <string name="password_hint">Password</string>
    <string name="login_btn">Log In</string>
    <string name="loginMsg">Fields Shoulod not be Empty</string>
    <string name="action_settings">Settings</string>
    <string name="city_hint">Enter City Name</string>
    <string name="download">Download</string>
    <string name="forgot_pwd">Forgot Password?</string>
    <string name="title">Paradigm Creatives</string>
    <string name="login">Log in to Paradigm Creatives</string>
    <string name="city_name">CityName</string>
    <string name="humidity">Humidity</string>
    <string name="temperature">Temparature</string>
    <string name="min">Min-Temp</string>
    <string name="max">Max-Temp</string>
    <string name="download_complete">Download Completed</string>

</resources>