<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
     >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/login_logo"
            android:layout_weight="1.4" 
            android:padding="20dp"/>

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:background="@color/red"
            android:text="@string/title"
            android:textColor="@color/white"
            android:textSize="16sp" 
            android:textStyle="bold"
            android:layout_weight=".6"
             android:layout_marginRight="10dp"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_gravity="center"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="10dp"
        android:text="@string/login"
        android:textColor="@color/red"
        android:textSize="16sp" 
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="90dp" >

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username_txt"
            android:textStyle="bold" />

        <EditText
            android:layout_marginTop="5dp"
            android:id="@+id/username_edt"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/username_hint"
            android:background="@drawable/edit_text_background" 
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="90dp" >

        <TextView
             android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_txt"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/password_edt"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/password_hint"
            android:inputType="textPassword" 
            android:background="@drawable/edit_text_background"
            android:textStyle="bold"/>

    </LinearLayout>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="10dp"
        android:background="@color/violet"
        android:text="@string/login_btn"
        android:textColor="@color/white"
        android:padding="10dp"
        android:textSize="20sp"
        android:textStyle="bold"/>
    
        <TextView
            android:layout_width="193dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="130dp"
            android:layout_marginTop="15dp"
            android:text="@string/forgot_pwd"
            android:textSize="16sp"
            android:textStyle="bold" />

</LinearLayout>